change the button color

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="jumbotron">
       <img src="img/logo.png" class="logo" alt="" />
       <ul class="navbar">
-        <li class="nav-item"><a href=”#”>Dummy Link</a></li>
-        <li class="nav-item"><a href=”#”>Dummy Link</a></li>
-        <li class="nav-item"><a href=”#”>Dummy Link</a></li>
+        <li class="nav-item"><a href=”#”>Lineup</a></li>
+        <li class="nav-item"><a href=”#”>Contact</a></li>
+        <li class="nav-item"><a href=”#”>Art</a></li>
       </ul>
 
-      <p class="header h-centered">Go to STRP in 2017</p>
+      <p class="header h-centered">STRP Festival</p>
       <div class="button">
         <a href="#" class="h-centered">Click Here</a>
       </div>
@@ -27,23 +27,16 @@
         <p>Column 1 text goes here</p>
       </div>
       <div class="column">
-        <i class="fa fa-car"></i>
+        <i class="fa fa-bicycle"></i>
         <h4>Column 1</h4>
         <p>Column 1 text goes here</p>
       </div>
       <div class="column">
-        <i class="fa fa-car"></i>
+        <i class="fa fa-plane"></i>
         <h4>Column 1</h4>
         <p>Column 1 text goes here</p>
       </div>
-
     </div>
-    <!-- <div class="jumbotron">
-
-    </div> -->
-
-    <div class="">
-
     </div>
 
   </body>
